# iota-payment-module

./: .editorconfig  .eslintrc  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  index.js  nodemon.json  package-lock.json  package.json
.github/workflows/: npmpublish.yml
config/: defaults.js
dashboard/: .env.development  .env.production  package.json  vue.config.js
dashboard/src/: main.js  permission.js  settings.js
dashboard/src/api/: account.js  payments.js  payouts.js  table.js  user.js
dashboard/src/directive/el-drag-dialog/: drag.js  (+1 more)
dashboard/src/router/: index.js
dashboard/src/styles/: index.scss  variables.scss
dashboard/src/utils/: request.js
docs/: README.md
example/: 01_simple_server.js  02_events.js  03_payout.js  04_payments.js  index.js
examples/: 01_simple_server copy.js  01_simple_server.js  02_custom_server.js  02_express_server_with_gui+api.js  03_events.js  04_payment.js  04_payments.js  05_payout.js  06_automated_payment.js  06_websocket.html  06_websockets.js  07_iotapay-button.html  functions.js
ipm-wasm/: README.md  iota_payment.js  iota_payment_bg.d.ts  iota_payment_bg.wasm  iotapay.d.ts  iotapay.js  iotapay_bg.wasm  package.json
lib/: Account.js  Database.js  WebSockets.js  config.js  create-server.js  eventEmitter.js  eventHandler.js  iota.js  payment.js  paymentHandler.js  payments.js  payout.js  payoutHandler.js  payouts.js  routes.js  tangle.js  zmq.js
lib/api/: account.js  auth.js  index.js  payments.js  payouts.js
src/: lib.rs
static/: iotapay-button.js  popup.html
(+13 files in other folders)
