[package]
name = "iotapay"
version = "0.0.1"
authors = ["huhn511 <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"
iota-signing = "0.2.1"
iota-conversion = "0.3.0"
js-sys = "0.3.39"